--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
+
+.App{
+  /* text-align: center; */
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
+
+
+.card {
+  padding: 10px;
+  margin: 20px;
+  /* text-align: center; */
+  background-color: rgb(247, 247, 247);
+  box-shadow: 2px 2px 2px rgb(79, 74, 74);
+  width: 700px;
+}
+
+.form-group input {
+  width: 270px;
+  border: 0.5px solid rgb(191, 189, 186);
+  box-shadow: rgba(0.5, 0.5, 0.5, 0.5);
+  border-radius: 2px 2px;
+  height: 25px;
+  margin: 5px;
+}
+.form-group{
+  padding: 10px;
+  border: 0px solid rgb(248, 246, 246);
+  box-sizing: border-box;
+   background-color: rgb(255, 255, 255);
+   border-radius: 5px 5px;
+  margin: 30px;
+}
+
+.card-header{
+  background-color: lightslategray;
+  color: black;
+  font-weight: bold;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+  background-color: rgb(46, 156, 230);
+  margin-left: 200px;
+  padding: 10px;
+  border: 2px solid rgb(225, 225, 235);
+  border-radius: 10px 10px;
+  font-weight: bold;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn{
+  margin-left: 0px;
+  margin-top: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dlt-btn{
+  background-color: red;
+  margin-left: 10px;
+  margin-top: 5px;
 }
